--- a/index.html
+++ b/index.html
@@ -1,12 +1,129 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>PAPI KOHLS</h1>
-</body>
-</html>
+<html lang="es">
+  <head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <title>Mi Portafolio</title>
+    <link href="styles.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+
+
+
+  <body>
+    <header>
+      <div class="img-portada"></div>
+    <img src="images/imagen-perfil.jpg" class="header-img" alt="fotografia del estudiante Maikel"></img>
+    <h1 class="header">Maikel Zambrano</h1>
+    <h2 class="subtitle">cuarto A</h2>
+    <nav class="navigation">
+      <ul class="nav-item">
+        <li><a href="#" Acerca de></a> Acerca de</li></ul>
+
+      <ul class="nav-item">
+        <li><a href="#"></a>Mis Proyectos</li></ul>
+
+      <ul class="nav-item">
+        <li><a href="#"></a>Contacto</li></ul>
+    </nav>
+</header>
+<main>
+  <section>
+    <h2 class="header">Acerca de</h2>
+    <p class="intro">
+      Hola soy Maikel Zambrano, estudio ingeniería en tecnologías de la información
+      en la Universidad Laica Eloy Alfaro de Manabí, tengo como objetivo terminar mi carrera 
+      uiversitaria y luego realizar una maestría en alguna universidad del extranjero.
+      Me gusta mucho el futbol, soy hincha del Manta F.C aunque mi sueño es visitar el estadio de 
+      boca Juniors "La Bombonera"
+      <ul class="social-media">
+        <li>
+          <a href="https://twitter.com" target="_blank"
+            ><img src="images/twitter.png" alt="Twitter de nombreEstudiante"/>
+            <p class="social-link-text">Twitter</p>
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/" target="_blank">
+          <img src="images/github-logo.png" alt="Github"/>
+          <p class="social-link-text">Github</p>
+          </a>
+          </li>
+        <li>
+          <a href="https://www.linkedin.com" target="_blank"
+            ><img src="images/linkedin.png" alt="linkedin del estudiante"/>
+            <p class="social-link-text">Linkedln</p>
+          </a>
+        </li>
+      </ul>
+    </p>
+</section>
+<section>
+  <h2 class="header">Mis proyectos</h2>
+    <div class="carousel">
+      <button class="arrow arrow-left" aria-label="boton hacia atras"></button>
+      <div class="window">
+        <ul class="project-container">
+          <li class="project1-container"><button class="project1 project"><img
+          src="images/project1.png" class="project-img" alt="Mi primer
+          proyecto"></button></li>
+          <li class="project2-container"><button class="project2 project"><img
+          src="images/project2.png" class="project-img" alt="Mi segundo
+          proyecto"></button></li>
+          <li class="project3-container"><button class="project3 project"><img
+          src="images/project3.png" class="project-img" alt="Mi tercer
+          proyecto"></button></li>
+          <li class="project4-container" aria-hidden="true"><button class="project4
+          project" tabindex="-1"><img src="images/project4.png" class="project-img"
+          alt="Mi cuarto proyecto"></button></li>
+          <li class="project5-container" aria-hidden="true"><button
+          class="project5 project" tabindex="-1"><img src="images/project5.png"
+          class="project-img" alt="Mi quito proyecto"></button></li>
+          
+          
+        <!-- <li class="project4-container"><button class="project4 project"><img
+            src="images/project4.png" class="project-img" alt="Mi cuarto
+            proyecto"></button></li>
+            <li class="project5-container"><button class="project5 project"><img
+              src="images/project5.png" class="project-img" alt="Mi quinto
+              proyecto"></button></li>--> 
+          </ul>
+        </div> 
+      <button class="arrow arrow-right" aria-label="boton hacia adelante"></button>
+      </div>
+   </section>
+  </main>
+
+  <footer class="contact-section">
+    <h2 class="header">Contacto</h2>
+    <p class="intro">Para manderme un mensaje puedes usar el formulario que
+    sigue</p>
+    <form class="form-container">
+    <label class="form-label">Nombre</label><input type="text" arialabel="
+    nombre" id="name" />
+    <span id="name-error" aria-live="assertive"></span>
+    <br />
+    <label class="form-label">Correo</label><input type="text" arialabel="
+    correo" /> <br />
+    <label class="message-input">Mensaje<input type="text" /> <br
+    /></label>
+    <button class="send-button">Enviar</button>
+    </form>
+    </footer>
+
+    <div class="notification" aria-live="assertive">El formulario fue enviado sin errores</div>
+    <div class="modal-container">
+      <div class="modal">
+      <h2 class="header" id="modal-header" tabindex="0">Ejemplo de un
+      proyecto mio</h2>
+      <img src="images/project1.png" class="modal-project-image"
+      alt="pantallazo del proyecto"/>
+      <button class="modal-button">Cerrar</button>
+      </div>
+      </div>
+
+    <script src="index.js" type="text/javascript"></script>
+  </body>
