--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
     <h2 class="subtitle">cuarto A</h2>
     <nav class="navigation">
       <ul class="nav-item">
-        <li><a href="#" Acerca de></a> Acerca de</li></ul>
+        <li><a href="#Acerca" ></a> Acerca de</li></ul>
 
       <ul class="nav-item">
-        <li><a href="#"></a>Mis Proyectos</li></ul>
+        <li><a href="proyectos"></a>Mis Proyectos</li></ul>
 
       <ul class="nav-item">
         <li><a href="#"></a>Contacto</li></ul>
     </nav>
 </header>
 <main>
-  <section>
-    <h2 class="header">Acerca de</h2>
+  <section >
+    <h2 class="header" id="Acerca">Acerca de</h2>
     <p class="intro">
       Hola soy Maikel Zambrano, estudio ingeniería en tecnologías de la información
       en la Universidad Laica Eloy Alfaro de Manabí, tengo como objetivo terminar mi carrera 
@@ -61,7 +61,7 @@
       </ul>
     </p>
 </section>
-<section>
+<section id="proyectos">
   <h2 class="header">Mis proyectos</h2>
     <div class="carousel">
       <button class="arrow arrow-left" aria-label="boton hacia atras"></button>
@@ -82,14 +82,6 @@
           <li class="project5-container" aria-hidden="true"><button
           class="project5 project" tabindex="-1"><img src="images/project5.png"
           class="project-img" alt="Mi quito proyecto"></button></li>
-          
-          
-        <!-- <li class="project4-container"><button class="project4 project"><img
-            src="images/project4.png" class="project-img" alt="Mi cuarto
-            proyecto"></button></li>
-            <li class="project5-container"><button class="project5 project"><img
-              src="images/project5.png" class="project-img" alt="Mi quinto
-              proyecto"></button></li>--> 
           </ul>
         </div> 
       <button class="arrow arrow-right" aria-label="boton hacia adelante"></button>
@@ -119,8 +111,9 @@
       <div class="modal">
       <h2 class="header" id="modal-header" tabindex="0">Ejemplo de un
       proyecto mio</h2>
-      <img src="images/project1.png" class="modal-project-image"
-      alt="pantallazo del proyecto"/>
+      <div class="imagen-carrusel">
+      <img src="" class="modal-project-image"
+      alt="pantallazo del proyecto"/></div>
       <button class="modal-button">Cerrar</button>
       </div>
       </div>
